--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "babel-core": "^6.26.3",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.8.1",
+    "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-geocoder-autocomplete": "^3.1.0",
     "react-mapbox-gl": "^4.8.2",
-    "react-scripts": "0.9.x"
+    "react-scripts": "^3.4.1"
   },
   "devDependencies": {},
   "scripts": {
@@ -20,5 +21,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
