--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mapbox-gl": "^1.8.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.0",
     "react-geocoder-autocomplete": "^3.1.0",
     "react-mapbox-gl": "^4.8.2",
