--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "babel-core": "^6.26.3",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.8.1",
+    "mapbox-gl-geocoder": "^2.0.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.0",
+    "react-geocode": "^0.2.1",
     "react-geocoder-autocomplete": "^3.1.0",
     "react-mapbox-gl": "^4.8.2",
     "react-scripts": "^3.4.1"
