--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.1.2",
     "@mapbox/react-geocoder": "^2.5.0",
+    "@turf/turf": "^5.1.6",
     "axios": "^0.19.2",
     "babel-core": "^6.26.3",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.8.1",
+    "mapbox-gl-draw": "^0.16.0",
     "mapbox-gl-geocoder": "^2.0.1",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
@@ -16,6 +19,7 @@
     "react-geocode": "^0.2.1",
     "react-geocoder-autocomplete": "^3.1.0",
     "react-mapbox-gl": "^4.8.2",
+    "react-mapbox-gl-draw": "^2.0.4",
     "react-scripts": "^3.4.1"
   },
   "devDependencies": {},
